--- a/Lesson_00.ipynb
+++ b/Lesson_00.ipynb
@@ -6,7 +6,7 @@
       "name": "Lesson 00",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNq42bQ3Q0rsOdYGLRVUYni",
+      "authorship_tag": "ABX9TyMXA6erYNKfWX1L6FJzNLrv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -237,6 +237,37 @@
         "print(\"When \" + str(dividend) + \" is divided by \" + str(divisor) + \n",
         "      \" the result is a quotient of \" + str(dividend // divisor) + \n",
         "      \" and a remainder of \" + str(dividend % divisor) + \".\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DHBdzO08L_3s"
+      },
+      "source": [
+        "See if you can figure out from the following examples what the Python built-in function `divmod()` does."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r9L0YQbrMJ3n"
+      },
+      "source": [
+        "divmod(35,8)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vXS8Go5MMStX"
+      },
+      "source": [
+        "divmod(27,5)"
       ],
       "execution_count": null,
       "outputs": []
