--- a/Lesson_00.ipynb
+++ b/Lesson_00.ipynb
@@ -6,7 +6,7 @@
       "name": "Lesson 00",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMXA6erYNKfWX1L6FJzNLrv",
+      "authorship_tag": "ABX9TyMwWgan15HO+7FqB2YTxZrz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,15 @@
         "\n",
         "\n",
         "## Python Unit ##\n",
-        "We will be learning Python 3 in this course. There is a textbook for the course, but I will only cover a small part of it. The text is called *Think Python*. You can download a PDF of the book [here](http://greenteapress.com/thinkpython2/thinkpython2.pdf), or you can view an HTML version of the book [here](http://greenteapress.com/thinkpython2/html/index.html). I will copy exercises from the book into some lessons.\n"
+        "We will be learning Python 3 in this course. There is a textbook for the course, but I will only cover a small part of it. The text is called *Think Python*. You can download a PDF of the book [here](http://greenteapress.com/thinkpython2/thinkpython2.pdf), or you can view an HTML version of the book [here](http://greenteapress.com/thinkpython2/html/index.html). I will copy exercises from the book into some lessons.\n",
+        "\n",
+        "Given the popularity of Python you can find a multitude of sites that offer Python help. Here are a few options:\n",
+        "\n",
+        "*   The official [Python](https://www.python.org/) language site\n",
+        "*   Real Python [tutorials](https://realpython.com/start-here/) page\n",
+        "*   w3schools.com [Python](https://www.w3schools.com/python/default.asp) page\n",
+        "\n",
+        "\n"
       ]
     },
     {
