--- a/Lesson_02.ipynb
+++ b/Lesson_02.ipynb
@@ -6,7 +6,7 @@
       "name": "Lesson 02",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMFFyrXVwraeo2+PQclQS8E",
+      "authorship_tag": "ABX9TyPtml7LLbNPoiawMkAxhvw7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,9 +51,9 @@
         "\n",
         "You've already seen and used some of Python's built-in functions, such as `print(), int(), and float()`. Functions are always followed immediately by a pair of parentheses with no space between the function name and the opening parenthesis. Inside those parentheses you can insert the 'arguments' of the function. Some functions don't take any arguments and others take more than one argument.\n",
         "\n",
-        "Python has 69 built-in functions. You can see a description of them all [here](https://docs.python.org/3/library/functions.html). You will use some of these functions every time you do any programming, and others you may never use in a long career of programming. But it's a good idea to take a look at what you can do with plain vanilla Python programming (i.e. without importing any additional modules or packages.\n",
+        "Python has 69 built-in functions. You can see a description of them all [here](https://docs.python.org/3/library/functions.html). You will use some of these functions every time you do any programming, and others you may never use in a long career of programming. But it's a good idea to take a look at what you can do with plain vanilla Python programming (i.e. without importing any additional modules or packages).\n",
         "\n",
-        "Let's explore a few of these functions that we haven't seen yet. See if you can figure out what they're doing just by looking at the output. Change the arguments and experiment. I've put many of these function calls on the same line, separated by commas. This results in the outputs being separated by commas, too (technically the output is in the form a 'tuple')."
+        "Let's explore a few of the functions that we haven't seen yet. See if you can figure out what they're doing just by looking at the output. Change the arguments and experiment. I've put many of these function calls on the same line, separated by commas. This results in the outputs being separated by commas, too (technically the output is in the form a 'tuple')."
       ]
     },
     {
@@ -205,7 +205,7 @@
         "id": "1JRHJgqeXO71"
       },
       "source": [
-        "You'll notice that if you start to type a function in a Google Colab notebook (and other programming environments) you get some information popping up to help you use the function correctly. Try it now if you haven't done so already. In the code block below start typing some of the functions we saw above. As soon as you start typing the name of the function you'll get a list of available options and some information and then when you type the opening parenthesis you'll get more information."
+        "You'll notice that if you start to type a function in a Google Colab notebook (and other programming environments) you get some information popping up to help you use the function correctly. Try it now if you haven't done so already. In the code block below start typing some of the functions from above. As soon as you start typing the name of the function you'll get a list of available options and some information, and then when you type the opening parenthesis you'll get more information."
       ]
     },
     {
@@ -227,7 +227,7 @@
       "source": [
         "**Defining your own functions**\n",
         "\n",
-        "It's very easy to create your own functions. Let's create a function called square that takes a single numerical argument and returns the square of that argument. By convention all Python functions, just like variables, use lower case letters (see [here](https://www.python.org/dev/peps/pep-0008/#function-and-variable-names))."
+        "It's very easy to create your own functions. Let's create a function called `square` that takes a single numerical argument and returns the square of that argument. By convention all Python functions, just like variables, use lower case letters (see [here](https://www.python.org/dev/peps/pep-0008/#function-and-variable-names))."
       ]
     },
     {
@@ -277,7 +277,7 @@
         "id": "5JH4g0-oaT5H"
       },
       "source": [
-        "Let's make our function a bit more usable for others by creating a docstring. You can read all the technical details of docstrings [here](https://www.python.org/dev/peps/pep-0257/), but for our purposes we'll use the simplest form of docstring - a one liner."
+        "Let's make our function a bit more usable for others by creating a *docstring*. You can read all the technical details of docstrings [here](https://www.python.org/dev/peps/pep-0257/), but for our purposes we'll use the simplest form of docstring - a one liner."
       ]
     },
     {
@@ -353,7 +353,9 @@
       "source": [
         "**Exercises**\n",
         "\n",
-        "Create a few functions of your own. Make sure to give them descriptive names. Maks sure to write a docstring for each function. Use some of the built-in functions we explored above."
+        "Create at least three functions of your own. Make sure to give them descriptive names. Maks sure to write a docstring for each function. Use some of the built-in functions we explored above.\n",
+        "\n",
+        "What happens when functions are used in a way that wasn't intended? What happens when the arguments to `add()` are strings? Try different possibilities with your own functions."
       ]
     }
   ]
