--- a/Lesson_02.ipynb
+++ b/Lesson_02.ipynb
@@ -6,7 +6,7 @@
       "name": "Lesson 02",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPtml7LLbNPoiawMkAxhvw7",
+      "authorship_tag": "ABX9TyNwzPWvP/4/TQu3hhhxu++k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
         "id": "xAUP1FQCRjIj"
       },
       "source": [
-        "**Functions**\n",
+        "**Lesson 02** - Functions\n",
         "\n",
         "You've already seen and used some of Python's built-in functions, such as `print(), int(), and float()`. Functions are always followed immediately by a pair of parentheses with no space between the function name and the opening parenthesis. Inside those parentheses you can insert the 'arguments' of the function. Some functions don't take any arguments and others take more than one argument.\n",
         "\n",
