--- a/Lesson_02.ipynb
+++ b/Lesson_02.ipynb
@@ -6,7 +6,7 @@
       "name": "Lesson 02",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNwzPWvP/4/TQu3hhhxu++k",
+      "authorship_tag": "ABX9TyOJlnaX0FsqckpPKr1K5iac",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -317,6 +317,8 @@
         "Every function definition starts with the word def followed by the name of the function. Immediately after the function name (no space) is the pair of parentheses. Inside the parentheses we put our arguments (if any) and we separate multiple arguments using commas.\n",
         "\n",
         "Immediately after the closing parenthesis we need a colon (:). And the next line (and all subsequent lines) of the function must be indented. Most code editors (Google Colab is no exception) take care of this indentention automatically for us.\n",
+        "\n",
+        "In Python functions return a value (or values) by using the `return` keyword. Technically, if a function doesn't return any value it's called a procedure, but in Python there is no difference in how these are defined. (The textbook calls these `void` functions.) \n",
         "\n",
         "Let's create another simple function that adds two numbers."
       ]
