--- a/Lesson_04.ipynb
+++ b/Lesson_04.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Lesson 04",
       "provenance": [],
-      "authorship_tag": "ABX9TyMUxg1QwXWXqPf0c1F847s9",
+      "authorship_tag": "ABX9TyPDLmnltXIFT/ZvtuzzgJJv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
       "source": [
         "**Lesson 04** - Lists and strings\n",
         "\n",
-        "Let's learn a few more things about functions. This lesson is a bit longer because there are may ways to manipulate lists.\n",
+        "Let's learn about lists (and in the process a little about strings). This lesson is a bit longer because there are may ways to manipulate lists.\n",
         "\n",
         "A list is a fundamental data type in most programming languages and Python is no exception. Let's see how they work."
       ]
