--- a/Lesson_02.ipynb
+++ b/Lesson_02.ipynb
@@ -6,7 +6,7 @@
       "name": "Lesson 02",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOJlnaX0FsqckpPKr1K5iac",
+      "authorship_tag": "ABX9TyO6+pI79Drhg/hNSMamxiLU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -351,6 +351,164 @@
       "cell_type": "markdown",
       "metadata": {
         "id": "945vFpgDNwnx"
+      },
+      "source": [
+        "**Exercises**\n",
+        "\n",
+        "Create a function that takes a single argument and returns a value equal to the square of the input plus the input.\n",
+        "\n",
+        "*Note:* when you are creating a function you should not worry about whether the user will enter something inappropriate. With this function you should get an error if the user inputs a string. The user of the function should take the time to find out what the function is capable of and use it appropriately. To make a function deal gracefully with every possible (erroneous) input is bad programming practice."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XpqBo7DaxhYN"
+      },
+      "source": [
+        "def squareplus(n):\n",
+        "  '''  - your docstring here -   '''\n",
+        "  # fill in the rest of the function and make sure it passes the tests below"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gXj9ImU3xvDO"
+      },
+      "source": [
+        "squareplus(0) # should return 0"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uaKA0TFtx0x-"
+      },
+      "source": [
+        "squareplus(1) # should return 2"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "C4QxyxvHx0t3"
+      },
+      "source": [
+        "squareplus(10) # should return 110"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nqQ0RoBAx0pp"
+      },
+      "source": [
+        "squareplus(-3) # should return 6"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SBu7MEX7yZ6v"
+      },
+      "source": [
+        "squareplus(2.71) # should return 10.0541"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dLyUqbwNzNnB"
+      },
+      "source": [
+        "Create a function that takes a single argument that is a list and returns the sum of the minimum and maximum values."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YzskVdlHzNCE"
+      },
+      "source": [
+        "def minplusmax(l):\n",
+        "  '''  - your docstring here -   '''\n",
+        "  # fill in the rest of the function and make sure it passes the tests below"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uOZqIZS9zpgZ"
+      },
+      "source": [
+        "minplusmax([1, 2, 3, 4]) # should return 5"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sLp7195dzpcH"
+      },
+      "source": [
+        "minplusmax([10, 12, 35, 24]) # should return 45"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5JDOwUuMzpYH"
+      },
+      "source": [
+        "minplusmax([0, 0, 0, 0, 0]) # should return 0"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zfsdO5abzpSS"
+      },
+      "source": [
+        "minplusmax([-5, 2, -2, 5]) # should return 0"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Phd3QYh4zpI1"
+      },
+      "source": [
+        "minplusmax([7]) # should return 14"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xki0Qny4xOP7"
       },
       "source": [
         "**Exercises**\n",
